[gd_scene load_steps=2 format=3 uid="uid://bnpxt6v4h6vgb"]

[ext_resource type="Script" uid="uid://pybiknrqa020" path="res://Scripts/game_manager.gd" id="1_5oxib"]

[node name="GameManager" type="Node"]
script = ExtResource("1_5oxib")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 14.412
anchor_top = 15.525
anchor_right = 14.412
anchor_bottom = 15.525
offset_left = -328.48
offset_top = -21.0
offset_right = 328.52
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="LevelLabel" type="Label" parent="CanvasLayer/Control/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="LivesLabel" type="Label" parent="CanvasLayer/Control/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer/Control/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1
